<resources>
    <string name="app_name">Harmonic</string>
    <string-array name="sorting_options">
        <item>Top Stories</item>
        <item>Last 24 hours</item>
        <item>Last 48 hours</item>
        <item>Last week</item>
        <item>New Stories</item>
        <item>Best Stories</item>
        <item>Ask HN</item>
        <item>Show HN</item>
        <item>HN Jobs</item>
        <item>Bookmarks</item>
    </string-array>

    <string-array name="search_sorting_options">
        <item>Popularity</item>
        <item>Recent</item>
    </string-array>

    <string-array name="search_sorting_timescale">
        <item>All time</item>
        <item>Last year</item>
        <item>Last month</item>
        <item>Last week</item>
        <item>Last 24 hours</item>
    </string-array>

    <string name="search_query_display">"\"%s\""</string>
    <string name="loading_failed">Loading failed :(</string>
    <string name="no_results_found">No results found :(</string>
    <string name="search_stories">Search stories</string>
    <string name="story">Story</string>
    <string name="comment">Comment</string>
    <string name="poll">Poll</string>
    <string name="show_hn">Show HN</string>
    <string name="ask_hn">Ask HN</string>
    <string name="front_page">Front page</string>
    <string name="poll_option">Poll option</string>
    <string name="currently_on_front_page">Currently on the front page</string>
    <string name="username">Username</string>
    <string name="story_index">%1$d•</string>
    <string name="unknown_host">Unknown host</string>
    <string name="story_meta">{0,choice,0# 0 points|1# 1 point|1&lt;{0,number,integer} points}. {1}. {2}</string>
    <string name="dot">•</string>
    <string name="submission_comment_header">On \"%1$s\" %2$s</string>
    <string name="search">Search</string>
    <string name="post_type_default_is_story">Post type, default is story:</string>
    <string name="filter_by_a_single_username">Filter by a single username</string>
    <string name="sort_type">Sort by:</string>
    <string name="by_relevance">Relevance</string>
    <string name="by_date">Date</string>
</resources>